Fixed bottom bar size on iPhone devices

--- a/client/src/components/navs/BottomBar.module.scss
+++ b/client/src/components/navs/BottomBar.module.scss
@@ -1,13 +1,14 @@
 @use '../../styles/utils' as *;
 .bottom-bar{
   width: 100%;
-  height: 50px;
+  height: calc(55px + env(safe-area-inset-bottom));
   position: fixed;
   bottom: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: $dark-color;
+  padding-bottom: calc(env(safe-area-inset-bottom));
   div{
     .icon__btn{
       padding: 1em;
